Fix: Prevent task text from spilling out of container.

--- a/ScrumThing.Web/ScrumThing.Web/Content/Site.css
+++ b/ScrumThing.Web/ScrumThing.Web/Content/Site.css
@@ -79,7 +79,11 @@ tbody {
 }
 
 .break-word {
-    word-break: break-word;
+    word-wrap: break-word
+}
+
+.task-text {
+    white-space:pre-wrap;
 }
 
 .logo{
